# fiddle

./: .gitignore  CMakeLists.txt  doom.pic  dvd.pic  lib.pic
.github/workflows/: cmake-mac.yml
dll/: liblib.dylib
src/: font.h  lib.c
